--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,12 +1,10 @@
-=======
- BusCE
-=======
+# BusCE
 
-*** Release 0.0.2 del 03/06/2014 ***
+## Release 0.0.2 del 03/06/2014 ***
 Aggiunta icona di stato disponibilità terminale
 Modifica dell'interfaccia grafica.
 
-*** Release 0.0.1 del 19/05/2014 ***
+## Release 0.0.1 del 19/05/2014 ***
 Release di partenza. L'applicazione è stata testata con i seguenti terminali:
 
  - Motorola Symbol MC3070
